--- a/Feature/message/src/main/res/layout/message_list_item.xml
+++ b/Feature/message/src/main/res/layout/message_list_item.xml
@@ -2,45 +2,59 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
-        android:layout_gravity="right"
-        android:layout_alignParentRight="true"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="right"
         android:text="" />
 
     <TextView
         android:id="@+id/tv_content"
-        android:text=""
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_gravity="left"
         android:layout_toLeftOf="@id/tv_date"
-        android:layout_alignParentLeft="true"
-        android:layout_height="wrap_content" />
-
+        android:text="" />
 
 
     <LinearLayout
-        android:layout_below="@id/tv_content"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_content"
+        android:layout_marginTop="10dp">
 
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@mipmap/icon_qz"/>
+            android:src="@mipmap/icon_qz" />
 
-        <TextView
-            android:id="@+id/tv_filename"
-            android:text=""
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_below="@id/tv_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/tv_filename"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginLeft="5dp"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/tv_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
