16｜技术栈更新：消息组件Kotlin+MVVM重构

--- a/Feature/message/src/main/res/layout/fragment_message.xml
+++ b/Feature/message/src/main/res/layout/fragment_message.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/tv_message"
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="showTip"
+            type="boolean" />
+
+    </data>
+
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="" />
+        android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/file_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/tv_message"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text=""
+            android:visibility="@{showTip ? View.VISIBLE:View.GONE}" />
 
-</FrameLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/messageList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="@{showTip ? View.GONE:View.VISIBLE}" />
+
+
+    </FrameLayout>
+
+
+</layout>
